--- a/Match3/package.json
+++ b/Match3/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite --host"
   },
   "dependencies": {
+    "@vueuse/core": "^14.0.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
